# rust-game

./: .gitignore  Cargo.toml  README.md  game-rust.wasm  index.html
examples/: 1-center-gravity.rs
examples/3-better-input-and-modules/: objects.rs
examples/4-birds-flying/: input_manager.rs  utils.rs
src/: '  enemy.rs  input_manager.rs  main.rs  objects.rs  projectile.rs  ship.rs  utils.rs
src/objects/: birds.rs  polygon.rs
utils/wasm/: build.sh
